--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
 				top-performing baselines on MoCA-Mask test dataset.
 			</p>
 			<div>
-				<div class="video_class w-embed" height=72px><video width=100% height='100%' muted controls loop
+				<div style="height: 100px;"><video width=100% height='100%' muted controls loop
 						preload="metadata" poster="demo/arctic_fox.png">
 						<source src="demo/arctic_fox.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div class="video_class mobile w-embed" height=72px><video width=100% height=100% muted controls loop
+				<div style="height: 100px;"><video width=100% height=100% muted controls loop
 						preload="metadata" poster="demo/arctic_fox.png">
 						<source src="demo/arctic_fox.mp4" type="video/mp4">
 						Your browser does not support the video tag.
