--- a/index.html
+++ b/index.html
@@ -267,36 +267,26 @@
 				top-performing baselines on MoCA-Mask test dataset.
 			</p>
 			<div>
-				<div style="height: 100px;"><video width=100% height='100%' muted controls loop
+				<div style="height: 720;"><video width=100% height='100%' muted controls loop
 						preload="metadata" poster="demo/arctic_fox.png">
 						<source src="demo/arctic_fox.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div style="height: 100px;"><video width=100% height=100% muted controls loop
-						preload="metadata" poster="demo/arctic_fox.png">
-						<source src="demo/arctic_fox.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video></div>
-				<div class="video_class w-embed" height=72px><video width=100% height=100% muted controls loop
+				<div style="height: 720;"><video width=100% height=100% muted controls loop
 						preload="metadata" poster="demo/black_cat_1.png">
 						<source src="demo/black_cat_1.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div class="video_class mobile w-embed" height=72px><video width=100% height=100% muted controls loop
-						preload="metadata" poster="demo/black_cat_1.png">
-						<source src="demo/black_cat_1.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video></div>
-				<div class="video_class w-embed" height=720px><video width=100% height=720px muted controls loop
+				<!-- <div class="video_class w-embed" height=720px><video width=100% height=720px muted controls loop
 						preload="metadata" poster="demo/flower_crab_spider_2.png">
 						<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 						Your browser does not support the video tag.
-					</video></div>
-				<div class="video_class mobile w-embed" height=720px><video width=100% height=720px muted controls loop
+					</video></div> -->
+				<!-- <div class="video_class mobile w-embed" height=720px><video width=100% height=720px muted controls loop
 						preload="metadata" poster="demo/flower_crab_spider_2.png">
 						<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 						Your browser does not support the video tag.
-					</video></div>
+					</video></div> -->
 			</div>
 		</div>
 	</div>
