--- a/index.html
+++ b/index.html
@@ -311,16 +311,27 @@
 		</div>
 	</div>
 
-	<table align=center width=200>
-		<tr>
-			<td width=100><center><h1>Visitors</h1></center>
-				<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM"></script> -->
-				<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=1e5882&cmo=5daa5f&cmn=7f313b&ct=ffffff'></script>
-			</td>
-		</tr>
+	<table
+		style="width:100%;max-width:830px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+		<tbody>
+			<tr style="padding:0px">
+				<td style="padding:2.5%;width:16%;max-width:16%">
+					<center><h1>Visitors</h1></center>
+					<script type='text/javascript' id='clustrmaps'
+						src='//cdn.clustrmaps.com/map_v2.js?cl=d3bdbd&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script>
+				</td>
+			</tr>
+			
+			<tr>
+				<td style="padding:2.5%";width:16%;max-width:16%"><br>
+					<p style="text-align:right;">Website template from <a
+							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
+				</td>
+			</tr>
+		</tbody>
 	</table>
 
-	<table
+	<!-- <table
 		style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 		<tbody>
 			<tr>
@@ -330,7 +341,7 @@
 				</td>
 			</tr>
 		</tbody>
-	</table>
+	</table> -->
 </body>
 
 </html>
