--- a/index.html
+++ b/index.html
@@ -316,7 +316,9 @@
 		<tbody>
 			<tr style="padding:0px">
 				<td style="padding:2.5%;width:16%;max-width:16%">
-					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=6d6a6a&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script>
+					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=63c49a&cmn=d88237&ct=808080'></script>
+
+					<!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=6d6a6a&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script> -->
 				</td>
 			</tr>
 			
