--- a/index.html
+++ b/index.html
@@ -267,18 +267,18 @@
 				top-performing baselines on MoCA-Mask test dataset.
 			</p>
 			<div>
-				<div style="height: 200;"><video width=100% height='100%' muted controls loop
-						preload="metadata" poster="demo/arctic_fox.png">
+				<div style="height: 200;"><video width=100% height='100%' muted controls loop preload="metadata"
+						poster="demo/arctic_fox.png">
 						<source src="demo/arctic_fox.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div style="height: 200;"><video width=100% height=100% muted controls loop
-						preload="metadata" poster="demo/black_cat_1.png">
+				<div style="height: 200;"><video width=100% height=100% muted controls loop preload="metadata"
+						poster="demo/black_cat_1.png">
 						<source src="demo/black_cat_1.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div style="height: 200;"><video width=100% height=100% muted controls loop
-						preload="metadata" poster="demo/flower_crab_spider_2.png">
+				<div style="height: 200;"><video width=100% height=100% muted controls loop preload="metadata"
+						poster="demo/flower_crab_spider_2.png">
 						<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
@@ -312,18 +312,15 @@
 	</div>
 
 	<table
-		style="width:100%;max-width:200;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+		style="width:100%;max-width:800;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 		<tbody>
-			<tr style="padding:0px">
-				<td style="padding:2.5%;width:16%;max-width:16%">
-					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=63c49a&cmn=d88237&ct=808080'></script>
-
+			<tr>
+				<td style="padding:20px;width:35%;vertical-align:middle">
+					<script type='text/javascript' id='clustrmaps'
+						src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=63c49a&cmn=d88237&ct=808080'></script>
 					<!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=6d6a6a&w=a&t=n&d=uImnlGQbvLcGtZlwHXUkdnb_6p8QDj4V_CPra0MAdRM&co=ffffff&cmo=217012&cmn=a84451&ct=808080'></script> -->
 				</td>
-			</tr>
-			
-			<tr>
-				<td style="padding:2.5%;width:16%;max-width:16%">
+				<td style="padding:20px;width:40%;valign:middle">
 					<p style="text-align:right;">Website template from <a
 							href="https://www.matthewtancik.com/nerf">NeRF</a><br></p>
 				</td>
