--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
 	<div class="white_section_nerf wf-section">
 		<div class="grey_container w-container">
 			<h2 class="grey-heading_nerf">Demo videos</h2>
-			<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network with two
-				top-performing baselines on MoCA-Mask test dataset.
+			<p class="paragraph-3 nerf_text nerf_results_text">Here are results of our proposed network on MoCA-Mask test dataset.
 			</p>
 			<div>
 				<div style="height: 200;"><video width=100% height='100%' muted controls loop preload="metadata"
